# Project-Engine-SDL2

./: CMakeLists.txt  README.md
data/map/: map.tmx  tileset.tsx
src/: const.hpp  main.cpp
src/components/: Animation.cpp  Animation.hpp  Plataform.cpp  Plataform.hpp  RectangleShape.cpp  RectangleShape.hpp  Sprite.cpp  Sprite.hpp  Transform.cpp  Transform.hpp
src/core/: App.cpp  App.hpp  Component.cpp  Component.hpp  Entity.cpp  Entity.hpp  Texture.cpp  Texture.hpp  TileMap.cpp  TileMap.hpp  Window.cpp  Window.hpp
src/math/: Vector2.hpp  Vector2.inl
src/utils/: Clock.cpp  Clock.hpp  Color.cpp  Color.hpp  Drawable.hpp  Event.cpp  Event.hpp  WindowOpenGLSetting.cpp  WindowOpenGLSetting.hpp
